[gd_scene load_steps=2 format=3 uid="uid://cpxxgsxsyxcuo"]

[ext_resource type="Script" path="res://src/ui/pause_ui.gd" id="1_hhhmx"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hhhmx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -161.0
offset_right = 143.5
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Dead" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You Died
Game Over"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ReplayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Replay"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReplayButton" to="." method="_on_reset"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit"]
